--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -8,4 +8,4 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: [  "188.121.111.85:9100"  ]
+      - targets: [ {{ node_exporters_ips }}  ]
