add maxscale config && edit vars

--- a/roles/grafana/templates/docker-compose.yml.j2
+++ b/roles/grafana/templates/docker-compose.yml.j2
@@ -3,7 +3,7 @@ version: "3"
 services:
   grafana:
     user: root
-    image: grafana/grafana:latest
+    image: {{ grafana_image }}
     ports:
       - 3000:3000
     volumes:
