add target.json for prometheus

--- a/roles/prometheus/templates/docker-compose.yml.j2
+++ b/roles/prometheus/templates/docker-compose.yml.j2
@@ -2,13 +2,14 @@ version: "3"
 
 services:
   prometheus:
-    image: prom/prometheus:latest
+    image: {{ prometheus_image }}
     user: root
     ports:
       - 9090:9090
     volumes:
-      - /opt/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - /opt/monitoring/prometheus/data:/prometheus
+      - /opt/prometheus/targets.json:/etc/prometheus/targets.json
+      - /opt/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /opt/prometheus/data:/prometheus
 
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
