--- a/roles/node-exporter/templates/docker-compose.yml.j2
+++ b/roles/node-exporter/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   node-exporter:
-      image: prom/node-exporter
+      image: {{ node_exporter_image }}
       ports:
         - '9100:9100'
       volumes:
