--- a/roles/mariadb-master/templates/my.cnf.j2
+++ b/roles/mariadb-master/templates/my.cnf.j2
@@ -68,8 +68,8 @@ max_binlog_size         = 100M
 
 # slaves
 
-relay_log		= /var/log/mysql/relay-bin
-relay_log_index	= /var/log/mysql/relay-bin.index
+#relay_log		= /var/log/mysql/relay-bin
+#relay_log_index	= /var/log/mysql/relay-bin.index
 
 default_storage_engine	= InnoDB
 innodb_buffer_pool_size	= 256M
