--- a/roles/mariadb-slave/templates/docker-compose.yml.j2
+++ b/roles/mariadb-slave/templates/docker-compose.yml.j2
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   mariadb:
+    container_name: {{ container_name }}
     image: {{ mariadb_image }}
     ports:
       - 3306:3306
