--- a/roles/node-exporter/templates/docker-compose.yml.j2
+++ b/roles/node-exporter/templates/docker-compose.yml.j2
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   node-exporter:
+      container_name: {{ container_name }}
       image: {{ node_exporter_image }}
       ports:
         - '9100:9100'
