--- a/roles/prometheus/templates/docker-compose.yml.j2
+++ b/roles/prometheus/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   prometheus:
-    container_name: {{ container_name }}
+    container_name: prometheus
     image: {{ prometheus_image }}
     user: root
     ports:
