--- a/roles/grafana/templates/docker-compose.yml.j2
+++ b/roles/grafana/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   grafana:
-    container_name: {{ container_name }}
+    container_name: grafana
     user: root
     image: {{ grafana_image }}
     ports:
