--- a/roles/mariadb-slave/templates/init.sql.j2
+++ b/roles/mariadb-slave/templates/init.sql.j2
@@ -1,3 +1,3 @@
 STOP SLAVE;
-CHANGE MASTER TO MASTER_HOST='188.121.109.207', MASTER_USER='slave', MASTER_PASSWORD='mypass', MASTER_PORT=3306, MASTER_CONNECT_RETRY=10, MASTER_USE_GTID=current_pos;
+CHANGE MASTER TO MASTER_HOST='188.121.109.207', MASTER_USER='slave', MASTER_PASSWORD='{{ mysql_users_password }}', MASTER_PORT=3306, MASTER_CONNECT_RETRY=10, MASTER_USE_GTID=current_pos;
 START SLAVE;
