--- a/roles/mysql-exporter/templates/docker-compose.yml.j2
+++ b/roles/mysql-exporter/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mysql-exporter:
-    container_name: {{ container_name }}
+    container_name: mysql-exporter
     user: root
     image: {{ mysql_exporter_image }}
     ports:
