--- a/roles/mariadb-slave/templates/my.cnf.j2
+++ b/roles/mariadb-slave/templates/my.cnf.j2
@@ -60,7 +60,7 @@ transaction-isolation = READ-COMMITTED
 binlog_format = row
 log_bin         = /var/log/mysql/master-bin
 log_bin_index           = /var/log/mysql/master-bin.index
-
+proxy-protocol-networks=188.121.109.78
 log-basename=master
 
 expire_logs_days	= 10
